jWebSocket/src/cek/ruins/bookofnames/grammar/SentencesGeneratorParser.java
// $ANTLR 3.4 /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g 2013-04-15 10:43:01

  package cek.ruins.bookofnames.grammar;

  import cek.ruins.bookofnames.BookOfNames;
  import java.util.Random;
  import java.util.LinkedList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class SentencesGeneratorParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSIGNMENT", "COMMANDS", "COMMENT", "EMPTY", "LINEFEED", "POSTMODIFIER", "PREMODIFIER", "RULEID", "SELECTION_SEPARATOR", "STRING", "WORD", "WS", "'$('", "'('", "')'", "','", "':'", "';'", "'=='", "'?('", "'I'", "'S'"
    };

    public static final int EOF=-1;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int ASSIGNMENT=4;
    public static final int COMMANDS=5;
    public static final int COMMENT=6;
    public static final int EMPTY=7;
    public static final int LINEFEED=8;
    public static final int POSTMODIFIER=9;
    public static final int PREMODIFIER=10;
    public static final int RULEID=11;
    public static final int SELECTION_SEPARATOR=12;
    public static final int STRING=13;
    public static final int WORD=14;
    public static final int WS=15;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public SentencesGeneratorParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public SentencesGeneratorParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return SentencesGeneratorParser.tokenNames; }
    public String getGrammarFileName() { return "/home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g"; }






    // $ANTLR start "atom"
    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:64:1: atom[Grammar grammar] returns [Evaluator atom] : ( EMPTY | LINEFEED | (mod= PREMODIFIER )* WORD (pmod= POSTMODIFIER )* | (mod= PREMODIFIER )* RULEID (pmod= POSTMODIFIER )* | (mod= PREMODIFIER )* STRING (pmod= POSTMODIFIER )* ) ;
    public final Evaluator atom(Grammar grammar) throws RecognitionException {
        Evaluator atom = null;


        Token mod=null;
        Token pmod=null;
        Token WORD1=null;
        Token RULEID2=null;
        Token STRING3=null;

        try {
            // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:64:48: ( ( EMPTY | LINEFEED | (mod= PREMODIFIER )* WORD (pmod= POSTMODIFIER )* | (mod= PREMODIFIER )* RULEID (pmod= POSTMODIFIER )* | (mod= PREMODIFIER )* STRING (pmod= POSTMODIFIER )* ) )
            // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:65:7: ( EMPTY | LINEFEED | (mod= PREMODIFIER )* WORD (pmod= POSTMODIFIER )* | (mod= PREMODIFIER )* RULEID (pmod= POSTMODIFIER )* | (mod= PREMODIFIER )* STRING (pmod= POSTMODIFIER )* )
            {
             List<String> preModifiers = new LinkedList<String>(); 

            // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:66:7: ( EMPTY | LINEFEED | (mod= PREMODIFIER )* WORD (pmod= POSTMODIFIER )* | (mod= PREMODIFIER )* RULEID (pmod= POSTMODIFIER )* | (mod= PREMODIFIER )* STRING (pmod= POSTMODIFIER )* )
            int alt7=5;
            alt7 = dfa7.predict(input);
            switch (alt7) {
                case 1 :
                    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:67:9: EMPTY
                    {
                    match(input,EMPTY,FOLLOW_EMPTY_in_atom428); 

                     atom = new EmptyAtom(); 

                    }
                    break;
                case 2 :
                    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:69:9: LINEFEED
                    {
                    match(input,LINEFEED,FOLLOW_LINEFEED_in_atom448); 

                     atom = new LineFeedAtom(); 

                    }
                    break;
                case 3 :
                    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:71:9: (mod= PREMODIFIER )* WORD (pmod= POSTMODIFIER )*
                    {
                    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:71:9: (mod= PREMODIFIER )*
                    loop1:
                    do {
                        int alt1=2;
                        int LA1_0 = input.LA(1);

                        if ( (LA1_0==PREMODIFIER) ) {
                            alt1=1;
                        }


                        switch (alt1) {
                    	case 1 :
                    	    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:71:10: mod= PREMODIFIER
                    	    {
                    	    mod=(Token)match(input,PREMODIFIER,FOLLOW_PREMODIFIER_in_atom471); 

                    	     preModifiers.add(mod.getText()); 

                    	    }
                    	    break;

                    	default :
                    	    break loop1;
                        }
                    } while (true);


                    WORD1=(Token)match(input,WORD,FOLLOW_WORD_in_atom485); 

                     atom = new WordAtom(WORD1.getText()); atom.setPreModifiers(preModifiers); 

                    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:73:9: (pmod= POSTMODIFIER )*
                    loop2:
                    do {
                        int alt2=2;
                        int LA2_0 = input.LA(1);

                        if ( (LA2_0==POSTMODIFIER) ) {
                            alt2=1;
                        }


                        switch (alt2) {
                    	case 1 :
                    	    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:73:10: pmod= POSTMODIFIER
                    	    {
                    	    pmod=(Token)match(input,POSTMODIFIER,FOLLOW_POSTMODIFIER_in_atom500); 

                    	     atom.addPostModifier(pmod.getText()); 

                    	    }
                    	    break;

                    	default :
                    	    break loop2;
                        }
                    } while (true);


                    }
                    break;
                case 4 :
                    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:76:9: (mod= PREMODIFIER )* RULEID (pmod= POSTMODIFIER )*
                    {
                    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:76:9: (mod= PREMODIFIER )*
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( (LA3_0==PREMODIFIER) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                    	case 1 :
                    	    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:76:10: mod= PREMODIFIER
                    	    {
                    	    mod=(Token)match(input,PREMODIFIER,FOLLOW_PREMODIFIER_in_atom526); 

                    	     preModifiers.add(mod.getText()); 

                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);


                    RULEID2=(Token)match(input,RULEID,FOLLOW_RULEID_in_atom540); 

                     atom = new RuleIdAtom(grammar, RULEID2.getText()); atom.setPreModifiers(preModifiers); 

                    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:78:9: (pmod= POSTMODIFIER )*
                    loop4:
                    do {
                        int alt4=2;
                        int LA4_0 = input.LA(1);

                        if ( (LA4_0==POSTMODIFIER) ) {
                            alt4=1;
                        }


                        switch (alt4) {
                    	case 1 :
                    	    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:78:10: pmod= POSTMODIFIER
                    	    {
                    	    pmod=(Token)match(input,POSTMODIFIER,FOLLOW_POSTMODIFIER_in_atom555); 

                    	     atom.addPostModifier(pmod.getText()); 

                    	    }
                    	    break;

                    	default :
                    	    break loop4;
                        }
                    } while (true);


                    }
                    break;
                case 5 :
                    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:80:9: (mod= PREMODIFIER )* STRING (pmod= POSTMODIFIER )*
                    {
                    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:80:9: (mod= PREMODIFIER )*
                    loop5:
                    do {
                        int alt5=2;
                        int LA5_0 = input.LA(1);

                        if ( (LA5_0==PREMODIFIER) ) {
                            alt5=1;
                        }


                        switch (alt5) {
                    	case 1 :
                    	    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:80:10: mod= PREMODIFIER
                    	    {
                    	    mod=(Token)match(input,PREMODIFIER,FOLLOW_PREMODIFIER_in_atom580); 

                    	     preModifiers.add(mod.getText()); 

                    	    }
                    	    break;

                    	default :
                    	    break loop5;
                        }
                    } while (true);


                    STRING3=(Token)match(input,STRING,FOLLOW_STRING_in_atom594); 

                     atom = new StringAtom(STRING3.getText()); atom.setPreModifiers(preModifiers); 

                    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:82:9: (pmod= POSTMODIFIER )*
                    loop6:
                    do {
                        int alt6=2;
                        int LA6_0 = input.LA(1);

                        if ( (LA6_0==POSTMODIFIER) ) {
                            alt6=1;
                        }


                        switch (alt6) {
                    	case 1 :
                    	    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:82:10: pmod= POSTMODIFIER
                    	    {
                    	    pmod=(Token)match(input,POSTMODIFIER,FOLLOW_POSTMODIFIER_in_atom609); 

                    	     atom.addPostModifier(pmod.getText()); 

                    	    }
                    	    break;

                    	default :
                    	    break loop6;
                        }
                    } while (true);


                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return atom;
    }
    // $ANTLR end "atom"



    // $ANTLR start "selection"
    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:86:1: selection[Grammar grammar] returns [Evaluator selection] : ( (mod= PREMODIFIER )* '(' arg1= phrase[$grammar] ( SELECTION_SEPARATOR (arg2= phrase[$grammar] ) )* ')' ) (pmod= POSTMODIFIER )* ;
    public final Evaluator selection(Grammar grammar) throws RecognitionException {
        Evaluator selection = null;


        Token mod=null;
        Token pmod=null;
        Evaluator arg1 =null;

        Evaluator arg2 =null;


        try {
            // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:86:58: ( ( (mod= PREMODIFIER )* '(' arg1= phrase[$grammar] ( SELECTION_SEPARATOR (arg2= phrase[$grammar] ) )* ')' ) (pmod= POSTMODIFIER )* )
            // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:87:7: ( (mod= PREMODIFIER )* '(' arg1= phrase[$grammar] ( SELECTION_SEPARATOR (arg2= phrase[$grammar] ) )* ')' ) (pmod= POSTMODIFIER )*
            {
             selection = new Selection(grammar);

            // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:88:7: ( (mod= PREMODIFIER )* '(' arg1= phrase[$grammar] ( SELECTION_SEPARATOR (arg2= phrase[$grammar] ) )* ')' )
            // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:88:9: (mod= PREMODIFIER )* '(' arg1= phrase[$grammar] ( SELECTION_SEPARATOR (arg2= phrase[$grammar] ) )* ')'
            {
            // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:88:9: (mod= PREMODIFIER )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==PREMODIFIER) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:88:10: mod= PREMODIFIER
            	    {
            	    mod=(Token)match(input,PREMODIFIER,FOLLOW_PREMODIFIER_in_selection660); 

            	     selection.addPreModifier(mod.getText()); 

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


            match(input,17,FOLLOW_17_in_selection672); 

            pushFollow(FOLLOW_phrase_in_selection682);
            arg1=phrase(grammar);

            state._fsp--;


             ((Selection)selection).addChoice(arg1); 

            // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:91:7: ( SELECTION_SEPARATOR (arg2= phrase[$grammar] ) )*
            loop9:
            do {
                int alt9=2;
                int LA9_0 = input.LA(1);

                if ( (LA9_0==SELECTION_SEPARATOR) ) {
                    alt9=1;
                }


                switch (alt9) {
            	case 1 :
            	    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:91:8: SELECTION_SEPARATOR (arg2= phrase[$grammar] )
            	    {
            	    match(input,SELECTION_SEPARATOR,FOLLOW_SELECTION_SEPARATOR_in_selection694); 

            	    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:91:28: (arg2= phrase[$grammar] )
            	    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:91:29: arg2= phrase[$grammar]
            	    {
            	    pushFollow(FOLLOW_phrase_in_selection699);
            	    arg2=phrase(grammar);

            	    state._fsp--;


            	     ((Selection)selection).addChoice(arg2); 

            	    }


            	    }
            	    break;

            	default :
            	    break loop9;
                }
            } while (true);


            match(input,18,FOLLOW_18_in_selection713); 

            }


            // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:93:7: (pmod= POSTMODIFIER )*
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( (LA10_0==POSTMODIFIER) ) {
                    alt10=1;
                }


                switch (alt10) {
            	case 1 :
            	    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:93:8: pmod= POSTMODIFIER
            	    {
            	    pmod=(Token)match(input,POSTMODIFIER,FOLLOW_POSTMODIFIER_in_selection726); 

            	     selection.addPostModifier(pmod.getText()); 

            	    }
            	    break;

            	default :
            	    break loop10;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return selection;
    }
    // $ANTLR end "selection"



    // $ANTLR start "command"
    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:96:1: command[Grammar grammar] returns [Evaluator command] : (mod= PREMODIFIER )* COMMANDS '(' (arg1= phrase[$grammar] )? ( ',' arg2= phrase[$grammar] )* ')' (pmod= POSTMODIFIER )* ;
    public final Evaluator command(Grammar grammar) throws RecognitionException {
        Evaluator command = null;


        Token mod=null;
        Token pmod=null;
        Token COMMANDS4=null;
        Evaluator arg1 =null;

        Evaluator arg2 =null;


        try {
            // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:96:54: ( (mod= PREMODIFIER )* COMMANDS '(' (arg1= phrase[$grammar] )? ( ',' arg2= phrase[$grammar] )* ')' (pmod= POSTMODIFIER )* )
            // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:97:7: (mod= PREMODIFIER )* COMMANDS '(' (arg1= phrase[$grammar] )? ( ',' arg2= phrase[$grammar] )* ')' (pmod= POSTMODIFIER )*
            {
             command = new Command(grammar);

            // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:98:7: (mod= PREMODIFIER )*
            loop11:
            do {
                int alt11=2;
                int LA11_0 = input.LA(1);

                if ( (LA11_0==PREMODIFIER) ) {
                    alt11=1;
                }


                switch (alt11) {
            	case 1 :
            	    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:98:8: mod= PREMODIFIER
            	    {
            	    mod=(Token)match(input,PREMODIFIER,FOLLOW_PREMODIFIER_in_command767); 

            	     command.addPreModifier(mod.getText()); 

            	    }
            	    break;

            	default :
            	    break loop11;
                }
            } while (true);


            COMMANDS4=(Token)match(input,COMMANDS,FOLLOW_COMMANDS_in_command779); 

             ((Command)command).setCommand(COMMANDS4.getText()); 

            match(input,17,FOLLOW_17_in_command789); 

            // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:101:9: (arg1= phrase[$grammar] )?
            int alt12=2;
            int LA12_0 = input.LA(1);

            if ( (LA12_0==COMMANDS||(LA12_0 >= EMPTY && LA12_0 <= LINEFEED)||(LA12_0 >= PREMODIFIER && LA12_0 <= RULEID)||(LA12_0 >= STRING && LA12_0 <= WORD)||(LA12_0 >= 16 && LA12_0 <= 17)||LA12_0==23) ) {
                alt12=1;
            }
            switch (alt12) {
                case 1 :
                    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:101:10: arg1= phrase[$grammar]
                    {
                    pushFollow(FOLLOW_phrase_in_command802);
                    arg1=phrase(grammar);

                    state._fsp--;


                     ((Command)command).addArg((Phrase)arg1); 

                    }
                    break;

            }


            // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:102:9: ( ',' arg2= phrase[$grammar] )*
            loop13:
            do {
                int alt13=2;
                int LA13_0 = input.LA(1);

                if ( (LA13_0==19) ) {
                    alt13=1;
                }


                switch (alt13) {
            	case 1 :
            	    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:102:10: ',' arg2= phrase[$grammar]
            	    {
            	    match(input,19,FOLLOW_19_in_command818); 

            	    pushFollow(FOLLOW_phrase_in_command822);
            	    arg2=phrase(grammar);

            	    state._fsp--;


            	     ((Command)command).addArg((Phrase)arg2); 

            	    }
            	    break;

            	default :
            	    break loop13;
                }
            } while (true);


            match(input,18,FOLLOW_18_in_command836); 

            // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:104:7: (pmod= POSTMODIFIER )*
            loop14:
            do {
                int alt14=2;
                int LA14_0 = input.LA(1);

                if ( (LA14_0==POSTMODIFIER) ) {
                    alt14=1;
                }


                switch (alt14) {
            	case 1 :
            	    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:104:8: pmod= POSTMODIFIER
            	    {
            	    pmod=(Token)match(input,POSTMODIFIER,FOLLOW_POSTMODIFIER_in_command847); 

            	     command.addPostModifier(pmod.getText()); 

            	    }
            	    break;

            	default :
            	    break loop14;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return command;
    }
    // $ANTLR end "command"



    // $ANTLR start "variable"
    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:107:1: variable[Grammar grammar] returns [Evaluator variable] : (mod= PREMODIFIER )* '$(' (varname= phrase[$grammar] )? ')' (pmod= POSTMODIFIER )* ;
    public final Evaluator variable(Grammar grammar) throws RecognitionException {
        Evaluator variable = null;


        Token mod=null;
        Token pmod=null;
        Evaluator varname =null;


        try {
            // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:107:56: ( (mod= PREMODIFIER )* '$(' (varname= phrase[$grammar] )? ')' (pmod= POSTMODIFIER )* )
            // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:108:7: (mod= PREMODIFIER )* '$(' (varname= phrase[$grammar] )? ')' (pmod= POSTMODIFIER )*
            {
             variable = new Variable(grammar); 

            // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:109:7: (mod= PREMODIFIER )*
            loop15:
            do {
                int alt15=2;
                int LA15_0 = input.LA(1);

                if ( (LA15_0==PREMODIFIER) ) {
                    alt15=1;
                }


                switch (alt15) {
            	case 1 :
            	    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:109:8: mod= PREMODIFIER
            	    {
            	    mod=(Token)match(input,PREMODIFIER,FOLLOW_PREMODIFIER_in_variable889); 

            	     variable.addPreModifier(mod.getText()); 

            	    }
            	    break;

            	default :
            	    break loop15;
                }
            } while (true);


            match(input,16,FOLLOW_16_in_variable901); 

            // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:111:9: (varname= phrase[$grammar] )?
            int alt16=2;
            int LA16_0 = input.LA(1);

            if ( (LA16_0==COMMANDS||(LA16_0 >= EMPTY && LA16_0 <= LINEFEED)||(LA16_0 >= PREMODIFIER && LA16_0 <= RULEID)||(LA16_0 >= STRING && LA16_0 <= WORD)||(LA16_0 >= 16 && LA16_0 <= 17)||LA16_0==23) ) {
                alt16=1;
            }
            switch (alt16) {
                case 1 :
                    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:111:10: varname= phrase[$grammar]
                    {
                    pushFollow(FOLLOW_phrase_in_variable914);
                    varname=phrase(grammar);

                    state._fsp--;


                     ((Variable)variable).setVariable((Phrase)varname); 

                    }
                    break;

            }


            match(input,18,FOLLOW_18_in_variable927); 

            // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:113:7: (pmod= POSTMODIFIER )*
            loop17:
            do {
                int alt17=2;
                int LA17_0 = input.LA(1);

                if ( (LA17_0==POSTMODIFIER) ) {
                    alt17=1;
                }


                switch (alt17) {
            	case 1 :
            	    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:113:8: pmod= POSTMODIFIER
            	    {
            	    pmod=(Token)match(input,POSTMODIFIER,FOLLOW_POSTMODIFIER_in_variable938); 

            	     variable.addPostModifier(pmod.getText()); 

            	    }
            	    break;

            	default :
            	    break loop17;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return variable;
    }
    // $ANTLR end "variable"



    // $ANTLR start "condition"
    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:116:1: condition[Grammar grammar] returns [Evaluator condition] : (mod= PREMODIFIER )* '?(' arg1= phrase[$grammar] '==' arg2= phrase[$grammar] ')' ':' '(' thenBranch= phrase[$grammar] ')' ( ':' '(' elseBranch= phrase[$grammar] ')' )? (pmod= POSTMODIFIER )* ;
    public final Evaluator condition(Grammar grammar) throws RecognitionException {
        Evaluator condition = null;


        Token mod=null;
        Token pmod=null;
        Evaluator arg1 =null;

        Evaluator arg2 =null;

        Evaluator thenBranch =null;

        Evaluator elseBranch =null;


        try {
            // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:116:58: ( (mod= PREMODIFIER )* '?(' arg1= phrase[$grammar] '==' arg2= phrase[$grammar] ')' ':' '(' thenBranch= phrase[$grammar] ')' ( ':' '(' elseBranch= phrase[$grammar] ')' )? (pmod= POSTMODIFIER )* )
            // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:117:8: (mod= PREMODIFIER )* '?(' arg1= phrase[$grammar] '==' arg2= phrase[$grammar] ')' ':' '(' thenBranch= phrase[$grammar] ')' ( ':' '(' elseBranch= phrase[$grammar] ')' )? (pmod= POSTMODIFIER )*
            {
             condition = new Condition(grammar); 

            // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:118:8: (mod= PREMODIFIER )*
            loop18:
            do {
                int alt18=2;
                int LA18_0 = input.LA(1);

                if ( (LA18_0==PREMODIFIER) ) {
                    alt18=1;
                }


                switch (alt18) {
            	case 1 :
            	    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:118:9: mod= PREMODIFIER
            	    {
            	    mod=(Token)match(input,PREMODIFIER,FOLLOW_PREMODIFIER_in_condition982); 

            	     condition.addPreModifier(mod.getText()); 

            	    }
            	    break;

            	default :
            	    break loop18;
                }
            } while (true);


            match(input,23,FOLLOW_23_in_condition995); 

            pushFollow(FOLLOW_phrase_in_condition1006);
            arg1=phrase(grammar);

            state._fsp--;


            match(input,22,FOLLOW_22_in_condition1009); 

            pushFollow(FOLLOW_phrase_in_condition1013);
            arg2=phrase(grammar);

            state._fsp--;


             ((Condition)condition).addLeftArg((Phrase)arg1); ((Condition)condition).addRightArg((Phrase)arg2); 

            match(input,18,FOLLOW_18_in_condition1025); 

            match(input,20,FOLLOW_20_in_condition1034); 

            match(input,17,FOLLOW_17_in_condition1036); 

            pushFollow(FOLLOW_phrase_in_condition1040);
            thenBranch=phrase(grammar);

            state._fsp--;


            match(input,18,FOLLOW_18_in_condition1043); 

             ((Condition)condition).addThenBranch((Phrase)thenBranch); 

            // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:123:8: ( ':' '(' elseBranch= phrase[$grammar] ')' )?
            int alt19=2;
            int LA19_0 = input.LA(1);

            if ( (LA19_0==20) ) {
                alt19=1;
            }
            switch (alt19) {
                case 1 :
                    // /home/cek/gitrepositories/ruins/jWebSocket/SentencesGenerator.g:123:10: ':' '(' elseBranch= phrase[$grammar] ')'
                    {
                    match(input,20,FOLLOW_20_in_condition1056); 

                    match(input,17,FOLLOW_17_in_condition1058); 

                    pushFollow(FOLLOW_phrase_in_condition1062);
                    elseBranch=phrase(grammar);

                    state._fsp--;

